Fixed up serving of static file Also started using the 'path' package, and exported the 'bodyparser' package

--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -16,5 +16,8 @@
 		"strictNullChecks": true,
 		"noImplicitReturns": true,
 		"skipDefaultLibCheck": true
-	}
+	},
+	"exclude": [
+		"../node_modules"
+	]
 }
