--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "@fugazi/connector",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "description": "basic functionality needed for creating a new fugazi connector using nodejs",
   "main": "./scripts/bin/index.js",
   "types": "./scripts/bin/index.d.ts",
+  "scripts": {
+    "compile-public": "node_modules/typescript/bin/tsc -p public/scripts",
+    "compile-server": "node_modules/typescript/bin/tsc -p scripts",
+    "compile": "npm-run-all compile-server compile-public",
+    "start": "node scripts/bin/index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fugazi-io/connector.node.git"
@@ -30,5 +36,8 @@
     "server-destroy": "^1.0.1",
     "typescript": "^2.3.2",
     "winston": "^2.3.1"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.0.1"
   }
 }
