--- a/public/scripts/tsconfig.json
+++ b/public/scripts/tsconfig.json
@@ -1,22 +1,22 @@
 {
-	"compilerOptions": {
-		"target": "ES5",
-
-		"outDir": "bin",
-		"rootDir": "src",
-		"sourceMap": true,
-		"declaration": true,
-
-		"skipLibCheck": true,
-		"alwaysStrict": true,
-		"noImplicitAny": true,
-		"removeComments": true,
-		"noImplicitThis": true,
-		"strictNullChecks": true,
-		"noImplicitReturns": true,
-		"skipDefaultLibCheck": true
-	},
-	"exclude": [
-		"../../node_modules"
-	]
+  "compilerOptions": {
+    "target": "ES5",
+    "outDir": "bin",
+    "rootDir": "src",
+    "sourceMap": true,
+    "declaration": true,
+    "skipLibCheck": true,
+    "alwaysStrict": true,
+    "noImplicitAny": true,
+    "removeComments": true,
+    "noImplicitThis": true,
+    "strictNullChecks": true,
+    "noImplicitReturns": true,
+    "skipDefaultLibCheck": true
+  },
+  "exclude": [
+    "../../scripts",
+    "bin",
+    "../../node_modules"
+  ]
 }
