--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,23 +1,24 @@
 {
-	"compilerOptions": {
-		"target": "ES6",
-		"module": "commonjs",
-
-		"outDir": "bin",
-		"rootDir": "src",
-		"sourceMap": true,
-		"declaration": true,
-
-		"skipLibCheck": true,
-		"alwaysStrict": true,
-		"noImplicitAny": true,
-		"removeComments": true,
-		"noImplicitThis": true,
-		"strictNullChecks": true,
-		"noImplicitReturns": true,
-		"skipDefaultLibCheck": true
-	},
-	"exclude": [
-		"../node_modules"
-	]
+  "compilerOptions": {
+    "target": "ES6",
+    "module": "commonjs",
+    "outDir": "bin",
+    "rootDir": "src",
+    "lib":["ES6"],
+    "sourceMap": true,
+    "declaration": true,
+    "skipLibCheck": true,
+    "alwaysStrict": true,
+    "noImplicitAny": true,
+    "removeComments": true,
+    "noImplicitThis": true,
+    "strictNullChecks": true,
+    "noImplicitReturns": true,
+    "skipDefaultLibCheck": true
+  },
+  "exclude": [
+    "../public/scripts",
+    "bin",
+    "../node_modules"
+  ]
 }
